[WebGPU] IPC copies too much data leading to jetsams on iOS https://bugs.webkit.org/show_bug.cgi?id=275422 <radar://129714560>

Reviewed by Tadeu Zagallo.

GPUQueue.writeTexture and GPUQueue.writeBuffer can pass a large
BufferSource but only end up copying a small number of bytes. We
were copying the entire BufferSource and passing it as a Vector
across IPC.

On iOS, this quickly led to jetsams on more complex examples.

Pass only the required data across shared memory to avoid large
copies and additional memory usage in the GPU process.

* Source/WebCore/Modules/WebGPU/GPUBuffer.cpp:
(WebCore::GPUBuffer::internalUnmap):
* Source/WebCore/Modules/WebGPU/GPUQueue.cpp:
(WebCore::GPUQueue::writeBuffer):
(WebCore::getExtentDimension):
(WebCore::width):
(WebCore::height):
(WebCore::depth):
(WebCore::requiredBytesInCopy):
(WebCore::GPUQueue::writeTexture):
* Source/WebCore/Modules/WebGPU/GPUTexture.cpp:
(WebCore::depthSpecificFormat):
(WebCore::stencilSpecificFormat):
(WebCore::GPUTexture::aspectSpecificFormat):
(WebCore::GPUTexture::texelBlockSize):
(WebCore::GPUTexture::texelBlockWidth):
(WebCore::GPUTexture::texelBlockHeight):
* Source/WebCore/Modules/WebGPU/GPUTexture.h:
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUBufferImpl.cpp:
(WebCore::WebGPU::BufferImpl::copy):
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUBufferImpl.h:
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPUBuffer.h:
* Source/WebCore/platform/SharedMemory.cpp:
(WebCore::SharedMemory::copySpan):
* Source/WebCore/platform/SharedMemory.h:
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteBuffer.cpp:
(WebKit::RemoteBuffer::copy):
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteBuffer.h:
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteBuffer.messages.in:
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteQueue.cpp:
(WebKit::RemoteQueue::writeBuffer):
(WebKit::RemoteQueue::writeTexture):
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteQueue.h:
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteQueue.messages.in:
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteBufferProxy.cpp:
(WebKit::WebGPU::RemoteBufferProxy::copy):
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteBufferProxy.h:
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteQueueProxy.cpp:
(WebKit::WebGPU::RemoteQueueProxy::writeBuffer):
(WebKit::WebGPU::RemoteQueueProxy::writeTexture):

Canonical link: https://commits.webkit.org/280124@main