Source/WebCore/Modules/WebGPU/GPUQueue.cpp
@@ -101,17 +101,133 @@ ExceptionOr<void> GPUQueue::writeBuffer(
     if (dataOffset > dataSize || dataOffset + contentSize > dataSize || (contentSize % 4))
         return Exception { ExceptionCode::OperationError };
 
-    m_backing->writeBuffer(buffer.backing(), bufferOffset, data.span(), dataOffset, contentSize);
+    m_backing->writeBuffer(buffer.backing(), bufferOffset, data.span().subspan(dataOffset, contentSize), 0, contentSize);
     return { };
+}
+
+static uint32_t getExtentDimension(const GPUExtent3D& size, size_t dimension)
+{
+    return WTF::switchOn(size, [&](const Vector<GPUIntegerCoordinate>& v) -> uint32_t {
+        return dimension < v.size() ? v[dimension] : 0u;
+    }, [&](const GPUExtent3DDict& size) -> uint32_t {
+        switch (dimension) {
+        default:
+        case 0:
+            return size.width;
+        case 1:
+            return size.height;
+        case 2:
+            return size.depthOrArrayLayers;
+        }
+    });
+}
+
+static uint32_t width(const GPUExtent3D& extent)
+{
+    return getExtentDimension(extent, 0);
+}
+static uint32_t height(const GPUExtent3D& extent)
+{
+    return getExtentDimension(extent, 1);
+}
+static uint32_t depth(const GPUExtent3D& extent)
+{
+    return getExtentDimension(extent, 2);
+}
+
+static size_t requiredBytesInCopy(const GPUImageCopyTexture& destination, const GPUImageDataLayout& layout, const GPUExtent3D& copyExtent)
+{
+    using namespace WebGPU;
+
+    auto texture = destination.texture;
+    if (!texture)
+        return 0;
+
+    auto aspectSpecificFormat = GPUTexture::aspectSpecificFormat(texture->format(), destination.aspect);
+    uint32_t blockWidth = GPUTexture::texelBlockWidth(aspectSpecificFormat);
+    uint32_t blockHeight = GPUTexture::texelBlockHeight(aspectSpecificFormat);
+    uint32_t blockSize = GPUTexture::texelBlockSize(aspectSpecificFormat);
+
+    auto copyExtentWidth = width(copyExtent);
+    auto widthInBlocks = copyExtentWidth / blockWidth;
+    if (copyExtentWidth % blockWidth)
+        return 0;
+
+    auto copyExtentHeight = height(copyExtent);
+    auto heightInBlocks = copyExtentHeight / blockHeight;
+    if (copyExtentHeight % blockHeight)
+        return 0;
+
+    auto bytesInLastRow = checkedProduct<uint64_t>(blockSize, widthInBlocks);
+    if (bytesInLastRow.hasOverflowed())
+        return 0;
+
+    auto requiredBytesInCopy = CheckedUint64(bytesInLastRow);
+    auto bytesPerImage = CheckedUint64(0);
+    if (heightInBlocks > 1) {
+        if (!layout.bytesPerRow.has_value())
+            return 0;
+
+        bytesPerImage = layout.bytesPerRow.value() * heightInBlocks;
+        requiredBytesInCopy = bytesPerImage;
+    }
+
+    auto copyExtentDepthOrArrayLayers = depth(copyExtent);
+    if (copyExtentDepthOrArrayLayers > 1) {
+        if (!layout.bytesPerRow.has_value() || !layout.rowsPerImage.has_value())
+            return 0;
+    }
+
+    if (layout.bytesPerRow.has_value()) {
+        if (*layout.bytesPerRow < bytesInLastRow.value())
+            return 0;
+    }
+
+    if (layout.rowsPerImage.has_value()) {
+        if (layout.rowsPerImage < heightInBlocks)
+            return 0;
+    }
+
+    if (copyExtentDepthOrArrayLayers > 0) {
+        requiredBytesInCopy = CheckedUint64(0);
+
+        if (heightInBlocks > 1)
+            requiredBytesInCopy += checkedProduct<uint64_t>(*layout.bytesPerRow, checkedDifference<uint64_t>(heightInBlocks, 1));
+
+        if (heightInBlocks > 0)
+            requiredBytesInCopy += bytesInLastRow;
+
+        if (copyExtentDepthOrArrayLayers > 1) {
+            bytesPerImage = checkedProduct<uint64_t>(*layout.bytesPerRow, *layout.rowsPerImage);
+
+            auto bytesBeforeLastImage = checkedProduct<uint64_t>(bytesPerImage, checkedDifference<uint64_t>(copyExtentDepthOrArrayLayers, 1));
+            requiredBytesInCopy += bytesBeforeLastImage;
+        }
+    }
+
+    return requiredBytesInCopy.hasOverflowed() ? 0 : requiredBytesInCopy.value();
 }
 
 void GPUQueue::writeTexture(
     const GPUImageCopyTexture& destination,
     BufferSource&& data,
-    const GPUImageDataLayout& imageDataLayout,
+    const GPUImageDataLayout& initialImageDataLayout,
     const GPUExtent3D& size)
 {
-    m_backing->writeTexture(destination.convertToBacking(), data.span(), imageDataLayout.convertToBacking(), convertToBacking(size));
+    auto imageDataLayout = initialImageDataLayout;
+    auto initialOffset = imageDataLayout.offset;
+    auto span = data.span();
+    auto spanLength = span.size();
+    auto requiredBytes = requiredBytesInCopy(destination, imageDataLayout, size);
+    if (initialOffset >= spanLength) {
+        initialOffset = 0;
+        requiredBytes = spanLength;
+    } else {
+        imageDataLayout.offset = 0;
+        requiredBytes = std::min<size_t>(spanLength - initialOffset, requiredBytes);
+    }
+
+    m_backing->writeTexture(destination.convertToBacking(), span.subspan(initialOffset, requiredBytes), imageDataLayout.convertToBacking(), convertToBacking(size));
 }
 
 static PixelFormat toPixelFormat(GPUTextureFormat textureFormat)
